<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:fadeScrollbars="false"
    android:verticalScrollbarPosition="left"
    android:clickable="true"
    android:focusableInTouchMode="true"
    tools:context=".CreateUserActivity">


   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:clickable="true"
       android:focusableInTouchMode="true"
       android:orientation="vertical">

      <TextView
          android:id="@+id/singupTitle"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="100dp"
          android:layout_marginLeft="100dp"
          android:layout_marginTop="49dp"
          android:layout_marginEnd="100dp"
          android:layout_marginRight="100dp"
          android:layout_marginBottom="10dp"
          android:text="@string/create_usr_ar"
          android:textColor="#FDFDFD"
          android:textSize="25sp"
          android:visibility="visible" />

      <TextView
          android:id="@+id/textView5"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="100dp"
          android:layout_marginLeft="100dp"
          android:layout_marginTop="25dp"
          android:layout_marginEnd="49dp"
          android:layout_marginRight="49dp"
          android:text="@string/name_ar"
          android:textColor="#FFFFFF"
          android:textSize="20sp" />

      <EditText
          android:id="@+id/editTextPersonName2"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="100dp"
          android:layout_marginLeft="100dp"
          android:layout_marginTop="5dp"
          android:layout_marginEnd="49dp"
          android:layout_marginRight="49dp"
          android:background="#FFFFFF"
          android:cursorVisible="true"
          android:ems="10"
          android:fadingEdge="vertical"
          android:hint="@string/name"
          android:inputType="textPersonName" />

      <TextView
          android:id="@+id/textView6"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="100dp"
          android:layout_marginLeft="100dp"
          android:layout_marginTop="30dp"
          android:layout_marginEnd="49dp"
          android:layout_marginRight="49dp"
          android:shadowColor="#F4F4F4"
          android:text="@string/familyname_ar"
          android:textColor="#FFFFFF"
          android:textSize="20sp" />

      <EditText
          android:id="@+id/editTextPersonName3"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="100dp"
          android:layout_marginLeft="100dp"
          android:layout_marginTop="5dp"
          android:layout_marginEnd="49dp"
          android:layout_marginRight="49dp"
          android:background="#FFFFFF"
          android:ems="10"
          android:hint="@string/familyname"
          android:inputType="textPersonName" />

      <TextView
          android:id="@+id/textView7"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="100dp"
          android:layout_marginLeft="100dp"
          android:layout_marginTop="30dp"
          android:layout_marginEnd="49dp"
          android:layout_marginRight="49dp"
          android:text="@string/email_ar"
          android:textColor="#FFFFFF"
          android:textSize="20sp" />

      <EditText
          android:id="@+id/editTextEmailAddress"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="100dp"
          android:layout_marginLeft="100dp"
          android:layout_marginTop="5dp"
          android:layout_marginEnd="49dp"
          android:layout_marginRight="49dp"
          android:background="#FFFFFF"
          android:ems="10"
          android:hint="@string/email"
          android:inputType="textEmailAddress" />

      <TextView
          android:id="@+id/textView8"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="100dp"
          android:layout_marginLeft="100dp"
          android:layout_marginTop="30dp"
          android:layout_marginEnd="49dp"
          android:layout_marginRight="49dp"
          android:text="@string/password"
          android:textColor="#FFFFFF"
          android:textSize="22sp" />

      <EditText
          android:id="@+id/editTextPassword1"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="100dp"
          android:layout_marginLeft="100dp"
          android:layout_marginTop="5dp"
          android:layout_marginEnd="49dp"
          android:layout_marginRight="49dp"
          android:background="#FFFFFF"
          android:ems="10"
          android:inputType="textPassword" />

      <TextView
          android:id="@+id/textView9"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="100dp"
          android:layout_marginLeft="100dp"
          android:layout_marginTop="30dp"
          android:layout_marginEnd="49dp"
          android:layout_marginRight="49dp"
          android:text="@string/reenter_pass_ar"
          android:textColor="#FFFFFF"
          android:textSize="22sp" />

      <EditText
          android:id="@+id/editTextPassword2"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="100dp"
          android:layout_marginLeft="100dp"
          android:layout_marginEnd="49dp"
          android:layout_marginRight="49dp"
          android:background="#FFFFFF"
          android:ems="10"
          android:inputType="textPassword" />

      <TextView
          android:id="@+id/textView10"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="100dp"
          android:layout_marginLeft="100dp"
          android:layout_marginTop="30dp"
          android:layout_marginEnd="49dp"
          android:layout_marginRight="49dp"
          android:hint="@string/press_ar"
          android:text="@string/birthday_ar"
          android:textColor="#FFFFFF"
          android:textSize="22sp" />

      <com.google.android.material.chip.Chip
          android:id="@+id/birthday"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:layout_marginTop="5dp"
          android:layout_marginStart="150dp"
          android:layout_marginEnd="75dp"
          android:layout_marginLeft="100dp"
          android:layout_marginRight="100dp"
          android:hint="@string/press_ar"
          android:textAlignment="center" />


      <Button
          android:id="@+id/button"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="25dp"
          android:layout_marginBottom="100dp"
          android:layout_marginLeft="150dp"
          android:layout_marginRight="100dp"
          android:backgroundTint="@color/buttonColor2"
          android:text="@string/submit_ar" />


   </LinearLayout>
</ScrollView>